--- a/molecule/install_agent/prepare.yml
+++ b/molecule/install_agent/prepare.yml
@@ -3,30 +3,22 @@
 - name: Prepare
   hosts: all
   tasks:
-    - name: Install python2
-      yum:
-        name: python2
-        state: present
-        update_cache: true
-      when: ansible_os_family == 'RedHat'
+  - when: ansible_os_family == 'Debian'
+    block:
+      - name: Install curl
+        apt:
+          name: curl
+          state: present
+          update_cache: true
 
-    - name: Install curl
-      apt:
-        name: curl
-        state: present
-        update_cache: true
-      when: ansible_os_family == 'Debian'
+      - name: Install apt-utils
+        apt:
+          name: apt-utils
+          state: present
+          update_cache: true
 
-    - name: Install apt-utils
-      apt:
-        name: apt-utils
-        state: present
-        update_cache: true
-      when: ansible_os_family == 'Debian'
-
-    - name: Install gnupg
-      apt:
-        name: gnupg
-        state: present
-        update_cache: true
-      when: ansible_os_family == 'Debian'
+      - name: Install gnupg
+        apt:
+          name: gnupg
+          state: present
+          update_cache: true
