--- a/molecule/install_agent/prepare.yml
+++ b/molecule/install_agent/prepare.yml
@@ -1,5 +1,5 @@
 ---
-# Install dependencies needed in order to successfully run the shell script
+# Install dependencies needed in order to successfully run the shell script.
 - name: Prepare
   hosts: all
   tasks:
