--- a/molecule/uninstall_agent/converge.yml
+++ b/molecule/uninstall_agent/converge.yml
@@ -1,4 +1,5 @@
 ---
+# This playbook calls the role. Molecule will invoke this playbook with ansible-playbook and run it against an instance created by the driver.
 - name: Converge
   hosts: all
   tasks:
