--- a/molecule/uninstall_agent/molecule.yml
+++ b/molecule/uninstall_agent/molecule.yml
@@ -1,5 +1,5 @@
 ---
-# This file is the central configuration entrypoint for Molecule. With this file, you can configure each tool that Molecule will employ when testing your role.
+# This file is the central configuration entrypoint for Molecule. With this file, you can configure each tool that Molecule will employ when testing the role.
 dependency:
   name: galaxy
 driver:
