--- a/molecule/install_agent/prepare.yml
+++ b/molecule/install_agent/prepare.yml
@@ -3,6 +3,13 @@
 - name: Prepare
   hosts: all
   tasks:
+  - name: Install python2
+    yum:
+      name: python2
+      state: present
+      update_cache: true
+    when: ansible_os_family == "RedHat"
+
   - when: ansible_os_family == 'Debian'
     block:
       - name: Install curl
