set fail fast to false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,11 @@ jobs:
     name: Molecule
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         agent_type:
           - monitoring
-          - logging
+            #- logging
           - ops-agent
         scenario:
           - install_agent
