set fail fast to false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         agent_type:
           - monitoring
-            #- logging
+          - logging
           - ops-agent
         scenario:
           - install_agent
