Add molecule tests and GitHub actions ci (#49)
* add tests and ci

* remove test that agent is running

* rename role to use underscores

* Use role instead of include_role when testing so seting the agent_type to google-cloud-ops has precendence

* Dont test ops-agent on amzn linux

* Create test for additional configurations

* rename role name

* fix indentation

* remove travis ci since it is superceded by the molecule tests

* have molecule lookup role name

* Only run custom config tests when env vars are set

* add tests and ci

* remove test that agent is running

* rename role to use underscores

* Use role instead of include_role when testing so seting the agent_type to google-cloud-ops has precendence

* rename role name

* remove extra vars

* Tags must contain lowercase letters and digits only

* test uninstall with various versions

* remove python2 dependency from redhat vms

* resolve merge conflicts

* fix indentation

* Add comments to molecule files

* Enable yamllint checks

* Change logging configuration link

* exclude amznlinux

* include python2 as redhat dependency

* set fail fast to false

* set fail fast to false

* correct version

* correct ops-agent version

* Change hosted runner to ubuntu 20.04

* remove amazonlinux and centos7 tests due to transient failures

* ignore .cahce dir

* ignore .cahce dir

* ignore .cache folder

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
+---
 galaxy_info:
   role_name: google_cloud_ops_agents
   author: Ryan Moriarty
@@ -28,12 +29,12 @@ galaxy_info:
   galaxy_tags:
     - monitoring
     - logging
-    - ops-agent
+    - ops
+    - agent
     - google
-    - google-cloud
+    - cloud
     - collectd
     - fluentd
-    - fluent-bit
-    - open-telemetry
-    - agent
+    - fluentbit
+    - opentelemetry
 dependencies: []
