--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,7 @@
     name: "{{ vars[agent_type + '_service_name'] }}"
     state: restarted
   when: package_state == 'present' and not ansible_check_mode and testing is not defined
+
+- name: "restart ops-agent agent windows"
+  win_shell: Restart-Service google-cloud-ops-agent -Force
+  when: package_state == 'present' and not ansible_check_mode and testing is not defined
