--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,12 +19,18 @@ galaxy_info:
         - groovy
     - name: EL
       versions:
+        - 6
         - 7
         - 8
     - name: SLES
       versions:
         - 12
         - 15
+    - name: Windows
+      versions:
+        - 2012
+        - 2016
+        - 2019
   galaxy_tags:
     - monitoring
     - logging
