--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Validate Operating Systen
   assert:
-    that: ansible_os_family in ['Debian', 'RedHat', 'Suse', 'Windows']
+    that: ansible_os_distribution in ['Debian', 'Ubuntu', 'RedHat', 'CentOS', 'SLES', 'openSUSE', 'SuSE', 'SLES_SAP', 'Windows']
     msg: >
-      Received invalid Operating System: '{{ agent_type }}'. The Cloud Ops Ansible role supports the following OSs: 'Debian', 'RedHat', 'Suse' and
-      'Windows'.
+      Received invalid Operating System: '{{ ansible_os_distribution }}'. The Cloud Ops Ansible role supports the following OSs: 'Debian', 'Ubuntu', 'RedHat',
+      'CentOS', 'SLES', 'openSUSE', 'SuSE', 'SLES_SAP' and 'Windows'.
 
 - name: Validate agent_type
   assert:
