--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   role_name: google_cloud_ops_agents
+  namespace: google_cloud_platform
   author: Ryan Moriarty
   description: Install the Google Cloud Ops Agents
   company: Google
@@ -25,6 +26,11 @@ galaxy_info:
       versions:
         - 12
         - 15
+    - name: Windows
+      versions:
+        - 2012
+        - 2016
+        - 2019
   galaxy_tags:
     - monitoring
     - logging
