--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,6 +5,10 @@
     state: restarted
   when: package_state == 'present' and not ansible_check_mode and testing is not defined
 
-- name: "restart ops-agent agent windows"
+- name: "restart windows ops-agent agent"
   win_shell: Restart-Service google-cloud-ops-agent -Force
+  when: package_state == 'present' and not ansible_check_mode and testing is not defined
+
+- name: "restart windows logging agent"
+  win_shell: Restart-Service -Name StackdriverLogging -Force
   when: package_state == 'present' and not ansible_check_mode and testing is not defined
