--- a/tasks/windows.yml
+++ b/tasks/windows.yml
@@ -54,10 +54,10 @@
       register: result
       failed_when: false
 
-    - name: Fail when the user request uninstallation and package is present.
-      fail:
+    - name: Validate package_state
+      assert:
+        that: not (package_state == 'absent' and result.rc == 0)
         msg: 'The Cloud Ops Ansible role does not support uninstalling the Windows logging agent. Please follow the steps at: https://cloud.google.com/logging/docs/agent/installation#uninstall'
-      when: package_state == 'absent' and result.rc == 0
 
     - when: package_state == 'present' and result.rc == 1
       block:
@@ -74,15 +74,6 @@
             chdir: "{{ tempfolder.path }}"
           notify: "restart windows {{ agent_type }} agent"
 
-    - when: package_state == 'absent' and result.rc == 0
-      block:
-        - name: Uninstall agent
-          win_shell: '.\\uninstall.exe'
-          args:
-            chdir: 'C:\Program Files (x86)\Stackdriver\LoggingAgent\'
-          register: result
-
-    - when: package_state == 'present'
       block:
         - name: Copy main config file onto the remote machine
           win_copy:
