--- a/tasks/linux.yml
+++ b/tasks/linux.yml
@@ -24,9 +24,10 @@
       '--uninstall --remove-repo' }} --version={{ version }} {{ '--dry-run' if ansible_check_mode else '' }}
   environment:
     REPO_CODENAME: "{{ ansible_distribution_release }}"
+  register: result
   retries: 5
   delay: 10
-  register: result
+  until: result.rc == 0
   check_mode: false
   changed_when: "'No changes made.' not in result.stdout_lines"
   notify: "restart {{ agent_type }} agent"
