Add amazon ami platform to the list of supported platforms

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -22,6 +22,9 @@ galaxy_info:
       versions:
         - 7
         - 8
+    - name: Amazon
+      versions:
+        - AMI
     - name: SLES
       versions:
         - 12
