Add windows logging support (#55)
* Add support for the windows logging agent, add correct min ansible version

* User validate instead of fail for consistency

* Update github actions file

* add unisntall block

* Fix call to logging handler

* change uninstall command

* Get uninstall working for logging agent

* Consolidate windows ops-agent and logging agent handlers

* remove superfluous blank line

* Add version validation for the win logging agent

* remove cached symlink to role

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,6 +5,6 @@
     state: restarted
   when: package_state == 'present' and not ansible_check_mode and testing is not defined
 
-- name: "restart ops-agent agent windows"
-  win_shell: Restart-Service google-cloud-ops-agent -Force
+- name: "restart windows {{ agent_type }} agent"
+  win_shell: "Restart-Service -Name {{ vars['windows_' + agent_type + '_service_name'] }} -Force"
   when: package_state == 'present' and not ansible_check_mode and testing is not defined
