--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,8 +3,8 @@
   service:
     name: "{{ vars[agent_type + '_service_name'] }}"
     state: restarted
-  when: package_state == 'present' and not ansible_check_mode and testing is not defined
+  when: package_state == 'present' and not ansible_check_mode
 
 - name: "restart windows {{ agent_type }} agent"
   win_shell: "Restart-Service -Name {{ vars['windows_' + agent_type + '_service_name'] }} -Force"
-  when: package_state == 'present' and not ansible_check_mode and testing is not defined
+  when: package_state == 'present' and not ansible_check_mode
