--- a/molecule/agent-install-test/converge.yml
+++ b/molecule/agent-install-test/converge.yml
@@ -2,11 +2,15 @@
 # This playbook calls the role. Molecule will invoke this playbook with ansible-playbook and run it against an instance created by the driver.
 - name: Converge
   hosts: all
+  become: true
+
   tasks:
     - name: Include google_cloud_ops_agents role
       include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
-        package_state: absent
-        testing: true
+        package_state: present
+        version: latest
+        main_config_file: "{{ lookup('env', 'MAIN_CONFIG_FILE') | default('', True) }}"
+        additional_config_dir: "{{ '' if agent_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
