--- a/molecule/agent-uninstall-test/converge.yml
+++ b/molecule/agent-uninstall-test/converge.yml
@@ -8,8 +8,4 @@
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
-        package_state: present
-        version: "{{ lookup('env', 'VERSION') | default('latest', True) }}"
-        main_config_file: "{{ lookup('env', 'MAIN_CONFIG_FILE') | default('', True) }}"
-        additional_config_dir: "{{ '' if agent_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
-        testing: true
+        package_state: absent
