--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -4,10 +4,10 @@
   connection: local
 
   tasks:
-    - name: create network resources
+    - name: Create network resources
       include_tasks: ../tasks/create_network.yml
 
-    - name: create instances
+    - name: Create instances
       include_tasks: ../tasks/create_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
