--- a/molecule/resources/tasks/create_instance.yml
+++ b/molecule/resources/tasks/create_instance.yml
@@ -1,12 +1,12 @@
 ---
 # Create the ip address and disk for the instance and the instance itself.
-- name: initialize instance facts
+- name: Initialize instance facts
   set_fact:
     instance_created:
       instances: []
   when: instance_created is not defined
 
-- name: create ip address
+- name: Create ip address
   gcp_compute_address:
     name: "{{ item.name }}"
     region: "{{ molecule_yml.driver.region }}"
@@ -16,7 +16,7 @@
     service_account_file: "{{ molecule_yml.driver.gcp_service_account_key }}"
   register: address
 
-- name: create disk
+- name: Create disk
   gcp_compute_disk:
     name: "{{ item.name }}"
     size_gb: "{{ item.size_gb }}"
@@ -28,7 +28,7 @@
     service_account_file: "{{ molecule_yml.driver.gcp_service_account_key }}"
   register: disk
 
-- name: "create instance {{ item.name }}"
+- name: "Create instance {{ item.name }}"
   gcp_compute_instance:
     state: present
     name: "{{ item.name }}"
@@ -55,7 +55,7 @@
         - ansibleinventory
   register: instance
 
-- name: update instance facts
+- name: Update instance facts
   set_fact:
     instance_created:
       changed: instance.changed | bool
