Use empty file instead of default agent configs for the plugin test, default configs fail validation

--- a/molecule/agent-install-test/verify.yml
+++ b/molecule/agent-install-test/verify.yml
@@ -55,7 +55,4 @@
 
         - name: Assert the plugin config was copied properly
           assert:
-            that:
-              - "'monitoring_custom_config.conf' in result.stdout"
-              - "'logging_custom_config.conf' in result.stdout"
-              - "'ops-agent_custom_config.conf' in result.stdout"
+            that: "'custom_config.conf' in result.stdout"
