run the uninstall playbook with root priviledges

--- a/molecule/agent-uninstall-test/converge.yml
+++ b/molecule/agent-uninstall-test/converge.yml
@@ -2,6 +2,8 @@
 # This playbook calls the role. Molecule will invoke this playbook with ansible-playbook and run it against an instance created by the driver.
 - name: Converge
   hosts: all
+  become: true
+
   tasks:
     - name: Uninstall agent
       include_role:
