--- a/molecule/resources/tasks/create_instance.yml
+++ b/molecule/resources/tasks/create_instance.yml
@@ -6,6 +6,15 @@
       instances: []
   when: instance_created is not defined
 
+- name: Register the default network
+  gcp_compute_network:
+    name: default
+    state: present
+    project: "{{ molecule_yml.driver.gcp_project_id }}"
+    auth_kind: serviceaccount
+    service_account_file: "{{ molecule_yml.driver.gcp_service_account_key }}"
+  register: network
+
 - name: Create ip address
   gcp_compute_address:
     name: "{{ item.name }}"
