--- a/molecule/agent-install-test/converge.yml
+++ b/molecule/agent-install-test/converge.yml
@@ -5,7 +5,7 @@
   become: true
 
   tasks:
-    - name: Include google_cloud_ops_agents role
+    - name: Install agent
       include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
