--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -31,6 +31,6 @@
         dest: "{{ molecule_instance_config }}"
       when: instance_created.changed
 
-    - name: Sleep one minute to allow GCP instances to spin up
+    - name: Sleep five minutes to allow GCP instances to spin up
       pause:
         minutes: 5
