Remove uninstall scenarios and instead add uninstall tests to the Verify playbook. Create test scenarios for each agent, which will allow us to customize platforms to each agent

--- a/molecule/resources/playbooks/create.yml
+++ b/molecule/resources/playbooks/create.yml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: Create instances
-      include_tasks: ../tasks/create_instance.yml
+      include_tasks: ./create_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
     - name: Populate instance config dict
