--- a/molecule/monitoring-test/molecule.yml
+++ b/molecule/monitoring-test/molecule.yml
@@ -16,67 +16,73 @@ lint: |
   yamllint .
   ansible-lint .
 platforms:
-  - name: "ansible-centos-7-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-centos-7-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/centos-cloud/global/images/family/centos-7
     machine_type: e2-medium
     size_gb: 40
     groups:
       - centos
-  - name: "ansible-centos-8-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-centos-8-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/centos-cloud/global/images/family/centos-8
     machine_type: e2-medium
     size_gb: 40
     groups:
       - centos
-  - name: "ansible-rhel-7-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-rhel-7-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/rhel-cloud/global/images/family/rhel-7
     machine_type: e2-medium
     size_gb: 40
     groups:
       - rhel
-  - name: "ansible-rhel-8-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-rhel-8-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/rhel-cloud/global/images/family/rhel-8
     machine_type: e2-medium
     size_gb: 40
     groups:
       - rhel
-  - name: "ansible-ubuntu-1604-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-ubuntu-1604-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts
     machine_type: e2-medium
     size_gb: 40
     groups:
       - ubuntu
-  - name: "ansible-ubuntu-1804-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-ubuntu-1804-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
     machine_type: e2-medium
     size_gb: 40
     groups:
       - ubuntu
-  - name: "ansible-ubuntu-2004-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-ubuntu-2004-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-2004-lts
     machine_type: e2-medium
     size_gb: 40
     groups:
       - ubuntu
-  - name: "ansible-debian-9-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-ubuntu-2010-${MOLECULE_SCENARIO_NAME}"
+    image_family: projects/ubuntu-os-cloud/global/images/family/ubuntu-2010
+    machine_type: e2-medium
+    size_gb: 40
+    groups:
+      - ubuntu
+  - name: "ansible-debian-9-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/debian-cloud/global/images/family/debian-9
     machine_type: e2-medium
     size_gb: 40
     groups:
       - debian
-  - name: "ansible-debian-10-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-debian-10-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/debian-cloud/global/images/family/debian-10
     machine_type: e2-medium
     size_gb: 40
     groups:
       - debian
-  - name: "ansible-sles-12-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-sles-12-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/suse-cloud/global/images/family/sles-12
     machine_type: e2-medium
     size_gb: 40
     groups:
       - sles
-  - name: "ansible-sles-15-${AGENT_TYPE}-${MOLECULE_SCENARIO_NAME}"
+  - name: "ansible-sles-15-${MOLECULE_SCENARIO_NAME}"
     image_family: projects/suse-cloud/global/images/family/sles-15
     machine_type: e2-medium
     size_gb: 40
@@ -86,6 +92,8 @@ provisioner:
   name: ansible
   playbooks:
     create: ../resources/playbooks/create.yml
+    converge: ../resources/playbooks/converge.yml
+    verify: ../resources/playbooks/verify.yml
     destroy: ../resources/playbooks/destroy.yml
 verifier:
   name: ansible
