--- a/molecule/resources/playbooks/destroy.yml
+++ b/molecule/resources/playbooks/destroy.yml
@@ -6,7 +6,7 @@
 
   tasks:
     - name: Delete instance
-      include_tasks: ../tasks/delete_instance.yml
+      include_tasks: ./delete_instance.yml
       loop: "{{ molecule_yml.platforms }}"
 
     - name: Populate instance config
