--- a/molecule/resources/playbooks/create_instance.yml
+++ b/molecule/resources/playbooks/create_instance.yml
@@ -56,11 +56,11 @@
     project: "{{ molecule_yml.driver.gcp_project_id }}"
     auth_kind: serviceaccount
     service_account_file: "{{ molecule_yml.driver.gcp_service_account_key }}"
-    service_accounts:
-      - scopes:
-          - https://www.googleapis.com/auth/logging.write
-          - https://www.googleapis.com/auth/logging.admin
-          - https://www.googleapis.com/auth/cloud-platform
+#    service_accounts:
+#      - scopes:
+#          - https://www.googleapis.com/auth/logging.write
+#          - https://www.googleapis.com/auth/logging.admin
+#          - https://www.googleapis.com/auth/cloud-platform
     metadata:
       enable-oslogin: false
       ssh-keys: "{{ molecule_yml.driver.ssh_user }}:{{ lookup('file', molecule_yml.driver.ssh_pub_key_file) }}\n"
