remove delete address step

--- a/molecule/resources/example_configs/monitoring_custom_config.conf
+++ b/molecule/resources/example_configs/monitoring_custom_config.conf
@@ -1,4 +1,4 @@
-# Sample custom config
+# Sample custom config.
 # This is the default configuration that is included when installing the monitoring agent.
 Interval 60
 # Explicitly set hostname to "" to indicate the default resource.
