--- a/molecule/resources/example_configs/ops-agent_custom_config.conf
+++ b/molecule/resources/example_configs/ops-agent_custom_config.conf
@@ -1,5 +1,5 @@
-# Sample custom config
- # This is the default configuration that is included when installing the ops-agent.
+# Sample custom config.
+# This is the default configuration that is included when installing the ops-agent.
 logging:
   receivers:
     syslog:
