--- a/molecule/resources/example_configs/logging_custom_config.conf
+++ b/molecule/resources/example_configs/logging_custom_config.conf
@@ -1,4 +1,4 @@
-# Sample custom config
+# Sample custom config.
 # This is the default configuration that is included when installing the logging agent.
 # Master configuration file for google-fluentd
 # Include any configuration files in the config.d directory.
